# music_decoding_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
configs/: config.yaml
experiments/: exp1_preliminary.py
scripts/: create_dummy_dataset.py  download_nmedt_subject.py  evaluate.py  preprocess_data.py  train.py
src/: dataset.py  losses.py  models.py  preprocessing.py  utils.py
